--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": ["OSL-3.0"],
     "require": {
         "php" : ">=5.4.0",
-        "techdivision/http": "dev-master"
+        "techdivision/http": "dev-master",
+        "techdivision/webserver": "dev-master@dev"
     },
     "autoload": {
         "psr-0": {"TechDivision": ["src/", "tests/"]}
