--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 before_script:
   - composer selfupdate
   - rm -rf ~/.composer/cache
+  - COMPOSER_ROOT_VERSION=dev-master composer install
 
 script:
   - ant build
