--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php" : ">=5.4.0",
         "techdivision/http": "dev-master",
-        "techdivision/webserver": "dev-master@dev"
+        "techdivision/webserver": "dev-master"
     },
     "autoload": {
         "psr-0": {"TechDivision": ["src/", "tests/"]}
