--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["mod_rewrite", "URL rewriting", "webserver", "module"],
     "homepage": "https://github.com/techdivision/TechDivision_RewriteModule",
     "license": ["OSL-3.0"],
+    "minimum-stability": "dev",
     "require": {
         "php" : ">=5.4.0",
         "techdivision/http": "dev-master",
