refactored EnvVar dictionary and build deploy.dir

--- a/build.default.properties
+++ b/build.default.properties
@@ -24,4 +24,5 @@ dir.www = /opt
 
 # ---- Instance Settings --------------------------------------------------------
 # Directories
+deploy.dir = /opt/appserver/app/code
 instance.base.dir = ${dir.www}/appserver
