--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,21 @@
     "license": ["OSL-3.0"],
     "minimum-stability": "dev",
     "require": {
-        "php" : ">=5.4.0",
+        "php": ">=5.4.0",
         "techdivision/http": "dev-master",
         "techdivision/webserver": "dev-master"
     },
-    "autoload": {
-        "psr-0": {"TechDivision": ["src/", "tests/"]}
+    "suggest": {
+        "techdivision/appserver-documentation": "Complete documentation of the appserver.io project"
     },
-    "config":{
-        "github-oauth":{
-            "github.com":"604a3b5943228e434a5b52c2ba3cf72286d30db9"
+    "autoload": {
+        "psr-0": {
+            "TechDivision": ["src/", "tests/"]
+        }
+    },
+    "config": {
+        "github-oauth": {
+            "github.com": "604a3b5943228e434a5b52c2ba3cf72286d30db9"
         }
     }
 }
