--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ php:
 
 before_install:
   - pecl install pthreads-beta
+  - pecl install xdebug
   - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
+  - wget https://scrutinizer-ci.com/ocular.phar
 
 before_script:
   - composer selfupdate
@@ -15,7 +17,9 @@ before_script:
 
 script:
   - ant build
+  - php ocular.phar code-coverage:upload --format=php-clover $TRAVIS_BUILD_DIR/target/reports/unit/clover.xml
 
 notifications:
   email: info@appserver.io
   hipchat: 95d47a72c5372d4a0fef20048c3200@Appserver
+
