--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "license": ["OSL-3.0"],
     "require": {
         "php": ">=5.4.0",
-        "techdivision/http": "0.1.*",
-        "techdivision/webserver": "0.2.*"
+        "techdivision/http": "0.1.*"
     },
     "suggest": {
         "techdivision/appserver-documentation": "Complete documentation of the appserver.io project"
