--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -1,16 +1,17 @@
 <phpunit bootstrap="${php-target.dir}/${unique.name}/src/bootstrap.php">
     <testsuites>
-	    <testsuite name="Rewrite Module Unit Tests">
-	        <directory suffix="Test.php">${php-target.dir}/${unique.name}/src</directory>
-	    </testsuite>
-	</testsuites>
+        <testsuite name="Rewrite Module Unit Tests">
+            <directory suffix="Test.php">${php-target.dir}/${unique.name}/src</directory>
+        </testsuite>
+    </testsuites>
     <filter>
         <whitelist>
             <directory suffix=".php">${php-target.dir}/${unique.name}/src</directory>
-		    <exclude>
-		        <directory prefix="Mock">${php-target.dir}/${unique.name}/src</directory>
-		        <directory suffix="Test.php">${php-target.dir}/${unique.name}/src</directory>
-		    </exclude>
+            <exclude>
+                <directory prefix="Mock">${php-target.dir}/${unique.name}/src</directory>
+                <directory suffix="Test.php">${php-target.dir}/${unique.name}/src</directory>
+                <file>${php-target.dir}/${unique.name}/src/bootstrap.php</file>
+            </exclude>
         </whitelist>
     </filter>
     <!-- Code coverage report, optional -->
