changed developer homepage

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"authors" : [{
 			"name" : "Bernhard Wick",
 			"email" : "b.wick@techdivision.com",
-			"homepage" : "https://github.com/wagnert",
+			"homepage" : "https://github.com/wick-ed",
 			"role" : "Developer"
 		}
 	],
